# sigma-agent

./: CLAUDE.md  CONTEXT.md  MISSION.md  NOTES.md  README.md  RESOURCES.md  pyproject.toml
.scratch/: spec-skill-agent-framework.md
assets/: lesson.css
learning-records/: 0001-project-overview.md  0002-router-scoring-function.md  0003-stage1-recall.md  0004-008-all-modules.md
lessons/: 0001-sigma-agent-overview.html  0002-router-scoring-function.html  0003-stage1-recall.html  0004-skill-executor.html  0005-memory-system.html  0006-reflection-engine.html  0007-context-compressor.html  0008-orchestrator.html
reference/: architecture.md
site/: index.html
src/sigma/: compressor.py  executor.py  memory.py  orchestrator.py  reflection.py  registry.py  router.py  skill.py  skills.py  storage.py
src/sigma/tools/: __init__.py  filesystem.py
tests/: test_compressor.py  test_memory_types.py  test_orchestrator.py  test_reference_tools.py  test_reflection.py  test_registry.py  test_router_executor.py  test_skill.py  test_storage.py
